[project]
name = "BioBridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0",
    "scienceplots>=2.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchsummary>=1.5.1",


    # windows only
    "windows-curses; platform_system == 'Windows'",
]
