[project]
name = "BioBridge"
version = "0.1.0"
description = "Middleware for real-time gesture recognition connecting BioGUI to Unity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchsummary>=1.5.1",


    # windows only
    "windows-curses; platform_system == 'Windows'",
]

[dependency-groups]
dev = ["ruff>=0.14.6"]
